Correct layout alignments

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -342,7 +342,7 @@ body {
 .contact-title {
   display: flex;
   justify-content: space-between;
-  padding: 103px 60px 0;
+  padding: 103px 55px 0;
   font-family: Poppins, sans-serif;
   font-size: 40px;
   font-weight: 700;
@@ -361,10 +361,11 @@ body {
   color: #ebebff;
 }
 
-.contact-form {
-  padding: 14px;
+.contact-form {  
   display: flex;
   flex-direction: column;
+  padding: 14px 24px 24px 24px;
+  margin-right: 24px;
 }
 
 .contact-input {
@@ -401,7 +402,7 @@ body {
   border: 1px solid #fff;
   align-self: flex-start;
   border-radius: 8px;
-  margin: 10px 0;
+  margin: 10px 0 24px;
   color: #6070ff;
   font-size: 17px;
   line-height: 24px;
